infrastructure/ingresses/templates/kibana-ingress.yaml
# # Ingress configuration for kibana.homelab.local
# ingress:
#   enabled: true
#   className: nginx  # or traefik, depending on your ingress controller
#   annotations:
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#     nginx.ingress.kubernetes.io/ssl-passthrough: "false"
#   hosts:
#     - host: kibana.homelab.local
#       paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: homelab-kb-http
#               port:
#                 number: 5601
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ui
  namespace: elastic-stack
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.homelab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homelab-kb-http
            port:
              number: 5601
